# loki_jsonschema_resolver

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  main.py  mypy.ini  pyproject.toml  pytest.ini  readme.md  test_ref_resolver.py  test_schema_extractor.py
loki_jsonschema_resolver/: __init__.py  ref_resolver.py
tests/: test_ref_resolver.py
